# PDF_Extract

./: CMakeLists.txt  PDF_Extract.kdev4  README.md  main.cpp  pdffile.cpp  pdffile.h
.kdev4/: PDF_Extract.kdev4
